Set a store debug mode

--- a/packages/store/src/store/StoreComponent.html
+++ b/packages/store/src/store/StoreComponent.html
@@ -1,4 +1,5 @@
 <template>
     <h5>Store</h5>
+    <button type="button" onclick={onRefresh}>Refresh</button>
     <code><pre>{storeAsJson}</pre></code>
 </template>
