--- a/packages/sample-app/src/fetch/users/users.html
+++ b/packages/sample-app/src/fetch/users/users.html
@@ -4,7 +4,7 @@
     SPDX-License-Identifier: BSD-3-Clause
     For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 -->
-<template>
+<template lwc:render-mode='light'>
     <template if:true={isLoading}>
         <div class="text-center" style="margin-top: 2em; margin-bottom: 2em;">
             <span class="spinner-border" role="status">
