--- a/packages/sample-app/src/store/ordersummary/ordersummary.html
+++ b/packages/sample-app/src/store/ordersummary/ordersummary.html
@@ -4,7 +4,7 @@
     SPDX-License-Identifier: BSD-3-Clause
     For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 -->
-<template>
+<template lwc:render-mode='light'>
     <div class="p-4">
         <p class="font-italic mb-4">Shipping and additional costs are calculated based on the number of items you selected.</p>
         <ul class="list-unstyled mb-4">
